@@ -12,6 +12,7 @@
  0; 0, 2, 0; 0, 0, 1], [2, 0, 0; 0, 1, 0; 0, 0, 1], [1, 0, 0; 0, 1, 0; 0, 0,
  1]]
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], [0]]
+[]
 0
 [32, 0, 27656345068767491604576153420888539136]
 0, 12, [24, 12, 40621487921685401825918161408203125]
@@ -100,4 +101,4 @@
   ***   at top-level: bnrisprincipal(bnrinit(bnf,1),1)
   ***                 ^--------------------------------
   *** bnrisprincipal: missing bnr generators: please use bnrinit(,,1).
-Total time spent: 315
+Total time spent: 339
