@@ -104,6 +104,7 @@ AP  79- nfgrunwaldwang could modify its arguments
         bnfinit(T,1).cyc -> [240, 12, 4, 2, 2, 2] (instead of [120, 4, 4, 2])
 BA  82- [mt] variable priorities in threads could be incorrect.
     83- galoissubcyclo: wrong result with bnr input [#2232]
+    84- subgrouplist(bnr) != [] when modulus is not the conductor
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
